Fixed spacing on follow button

--- a/client/static/css/amber.css
+++ b/client/static/css/amber.css
@@ -191,6 +191,9 @@ html.amber-host > body {
   padding: 4px 8px;
   cursor: pointer;
 }
+.amber-wrap h1 > button {
+  margin-left: 12px;
+}
 .amber-wrap button.small {
   padding: 2px 6px;
 }
